# cashflow-nicegui

./: README.md  main.py  pyproject.toml  utils.py
core/: cashflow.py  development.py  plotting.py  production.py
data/: DaewangGorae P50.json  DaewangGorae P90.json  Myungtae3 P90 FPSO.json  defaults.json  questor.xlsx
ui/: cash_flow.py  development.py  price_deck.py  settings.py
